fixed responsive sizing in about.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="menu">
             <h1 class ="myname style-heading">Cuauhtemoc Rodriguez</h1>
             <div class="menu-links">
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="contact.html">Contact</a>
+                    <a class ="style-other" href="index.html">About</a>
+                    <a class ="style-other"  href="portfolio.html">Portfolio</a>
+                    <a class ="style-other"  href="contact.html">Contact</a>
             </div>
         </div>
     </header>
