linking hangman game

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <div class="content-portfolio"> 
             <div class="image style-other">
                 <img src="assets/images/hangman.jpg" alt="This is something ive made">
-                <a href="#" class="image-text style-heading">Hangman</a>
+                <a href="/Word-Guess-Game" class="image-text style-heading">Hangman</a>
             </div>
             <div class="image style-other">
                 <img src="assets/images/rpggame.jpg" alt="This is something ive made">
